# Grad-Learn

./: .buildinfo  .gitignore  API.html  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  test.yml
Code/: README.md  ZINB_grad.py  Zeisel_data_prep.py  data_prep.py  experiment.py  experiment_ZINB_org.py  experiment_scvi.py  helper.py  job_submition.sh  job_submition_scvi.sh  log_like_test_ZINB.py
Experiments/: experiment_ZINB_org.py  experiment_scvi.py  job_submition_ZINB_org.sh  log_like_test_ZINB_org.py  log_like_test_scvi.py  test_zinb.py
Notebooks/: Experiments_on_log_lik.ipynb
_autosummary/: dataset.data_prep.Brain_Large.html  dataset.data_prep.CORTEX.html  dataset.data_prep.Indice_Sampler.html  dataset.data_prep.RETINA.html  dataset.data_prep.SyntheticData.html  dataset.data_prep.html  dataset.html  linear_model.ZINB_grad.ZINB_Grad.html  linear_model.ZINB_grad.html  linear_model.ZINB_grad.train_ZINB.html  linear_model.ZINB_grad.train_ZINB_with_val.html  linear_model.ZINB_grad.val_ZINB.html  linear_model.html  utils.helper.Eval_Imputation.html  utils.helper.HC.html  utils.helper.corrupting.html  utils.helper.entropy.html  utils.helper.entropy_batch_mixing.html  utils.helper.html  utils.helper.kmeans.html  utils.helper.measure_q.html  utils.helper.plot_line.html  utils.helper.plot_tSNE.html  utils.html
_modules/: index.html
_modules/dataset/: data_prep.html
_modules/linear_model/: ZINB_grad.html
_modules/utils/: helper.html
_sources/: index.rst.txt
_sources/_autosummary/: dataset.data_prep.Brain_Large.rst.txt  dataset.data_prep.CORTEX.rst.txt  dataset.data_prep.Indice_Sampler.rst.txt  dataset.data_prep.RETINA.rst.txt  dataset.data_prep.SyntheticData.rst.txt  dataset.data_prep.rst.txt  dataset.rst.txt  linear_model.ZINB_grad.ZINB_Grad.rst.txt  linear_model.ZINB_grad.rst.txt  linear_model.ZINB_grad.train_ZINB.rst.txt  linear_model.ZINB_grad.train_ZINB_with_val.rst.txt  linear_model.ZINB_grad.val_ZINB.rst.txt  linear_model.rst.txt  utils.helper.Eval_Imputation.rst.txt  utils.helper.HC.rst.txt  utils.helper.corrupting.rst.txt  utils.helper.entropy.rst.txt  utils.helper.entropy_batch_mixing.rst.txt  utils.helper.kmeans.rst.txt  utils.helper.measure_q.rst.txt  utils.helper.plot_line.rst.txt  utils.helper.plot_tSNE.rst.txt  utils.helper.rst.txt  utils.rst.txt
_sources/dataset/: index.rst.txt
_sources/linear_model/: ZINB-Grad.md.txt
_sources/utils/: index.rst.txt
dataset/: index.html
doc/: API.rst  conf.py  index.rst
doc/_autosummary/: grad.ZINB_grad.ZINB_Grad.rst  grad.ZINB_grad.rst  grad.ZINB_grad.val_ZINB.rst  grad.data_prep.Brain_Large.rst  grad.data_prep.CORTEX.rst  grad.data_prep.Indice_Sampler.rst  grad.data_prep.SyntheticData.rst  grad.data_prep.rst  grad.helper.corrupting.rst  grad.helper.entropy.rst  grad.helper.entropy_batch_mixing.rst  grad.helper.kmeans.rst  grad.helper.measure_q.rst  grad.helper.plot_tSNE.rst  grad.helper.rst  grad.rst
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/doctrees/_autosummary/: grad.ZINB_grad.ZINB_Grad.doctree  grad.ZINB_grad.doctree  grad.ZINB_grad.train_ZINB.doctree  grad.ZINB_grad.train_ZINB_with_val.doctree  grad.ZINB_grad.val_ZINB.doctree  grad.data_prep.Brain_Large.doctree  grad.data_prep.CORTEX.doctree  grad.data_prep.Indice_Sampler.doctree  grad.data_prep.RETINA.doctree  grad.data_prep.doctree  grad.doctree  grad.helper.Eval_Imputation.doctree  grad.helper.HC.doctree  grad.helper.corrupting.doctree  grad.helper.doctree  grad.helper.entropy.doctree  grad.helper.entropy_batch_mixing.doctree  grad.helper.kmeans.doctree  grad.helper.measure_q.doctree  grad.helper.plot_line.doctree  grad.helper.plot_tSNE.doctree
doc/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/_build/html/_autosummary/: grad.ZINB_grad.ZINB_Grad.html  grad.ZINB_grad.html  grad.ZINB_grad.train_ZINB.html  grad.html  (+17 more)
doc/_templates/: custom-class-template.rst  custom-module-template.rst
doc/linear_model/: ZINB-Grad.md  index.rst
grad/: ZINB_grad.py  data_prep.py  helper.py
grad/dataset/: data_prep.py
grad/utils/: helper.py
linear_model/: ZINB-Grad.html  index.html
notebooks/: EXAMPLE.md  Exp_Scalability.ipynb
src/: README.md
src/grad/: ZINB_grad.py  data_prep.py  helper.py
tests/: conftest.py  test_zinb.py
utils/: index.html
(+10 files in other folders)
