# Most of the file is adopted from Scikit-Learn

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[project]
name = "grad"
version = "0.1.0"
description = "Optimizing traditional machine learning models with gradient descent and GPUs."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    {name = "Hamid Hamidi"},
]
maintainers = [
    {name = "Hamid Hamidi"},
]
urls.Documentation = ""
urls.Source = "https://github.com/HH197/ZINB-Grad"
urls.Home-page = "https://github.com/HH197/ZINB-Grad"
classifiers = [
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: POSIX :: Linux",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24.3",
    "pandas>=1.5.3",
    "scipy>=1.10.1",
    "scikit-learn>=1.2.2",
    "h5py>=3.9.0",
    "torch>=2.0.1",
    "tqdm>=4.65.0",
    "pyro-ppl>=1.8",
    "loompy>=3.0.6",
    "matplotlib>=3.7"
]


[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "ruff",
]
docs = [
    "sphinx>=6.2.1",
    "sphinx-rtd-theme>=1.2.2",
]


[tool.black]
line-length = 88
target_version = ['py38', 'py39', 'py310']
preview = true
exclude = '''
/(
    \.eggs         # exclude a few common directories in the
  | \.git          # root of the project
  | \.mypy_cache
  | doc/_build
  | experiments
)/
'''


[tool.ruff]
# all rules can be found here: https://beta.ruff.rs/docs/rules/
select = ["E", "F", "W", "I"]

# max line length for black
line-length = 88
target-version = "py38"

ignore=[
    # space before : (needed for how black formats slicing)
    "E203",
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
]

exclude=[
    ".git",
    "__pycache__",
    "doc/*",
    "experiments/*",
]

